Call the proj4 loader crs instead.

--- a/extras/amdloader/example.html
+++ b/extras/amdloader/example.html
@@ -12,8 +12,8 @@
   <div id="log2"></div>
 </div>
 <script>
-  require.config({ proj: { directory: 'proj' } });
-  require(['proj4js','jquery','proj!EPSG:2400'], function (P, $, RT90){
+  require.config({crs: {directory: "proj/"}});
+  require(['proj4js','jquery','crs!EPSG:2400'], function (P, $, RT90){
 
     var point = new P.Point(11.965281029948926, 57.7044945757868);
 
