Split up classes. Kind of needed for the Store-functionality that I'm planning on adding

--- a/demo/leaflet/index.html
+++ b/demo/leaflet/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="map"></div>
     <script src="lib/Leaflet-0.4.4/leaflet.js"></script>
-    <script src="../../lib/proj4js-combined.js"></script>
+    <script src="../../dist/proj4js.js"></script>
     <script src="lib/proj4leaflet_modified.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="http://www.mapuse.com/billing/Client/v1/Leaflet.js"></script>     
